Last advanced functionality added(Persistence).